src/test/ui/issues/issue-31910.stderr
error[E0308]: mismatched types
  --> $DIR/issue-31910.rs:2:9
   |
LL |     X = Trait::Number,
   |         ^^^^^^^^^^^^^ expected isize, found i32

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
